@@ -630,8 +630,12 @@ LogSlowQueries=3000
 
 ### Option: LoadModule
 #	Module to load at proxy startup. Modules are used to extend functionality of the proxy.
-#	Format: LoadModule=<module.so>
-#	The modules must be located in directory specified by LoadModulePath.
+#	Formats:
+#		LoadModule=<module.so>
+#		LoadModule=<path/module.so>
+#		LoadModule=</abs_path/module.so>
+#	Either the module must be located in directory specified by LoadModulePath or the path must precede the module name.
+#	If the preceding path is absolute (starts with '/') then LoadModulePath is ignored.
 #	It is allowed to include multiple LoadModule parameters.
 #
 # Mandatory: no
